# file-management-tool

./: .gitignore  AGENTS.md  README.md  app.go  assets.go  go.mod  go.sum  main.go  reasonix.toml  wails.json
.codegraph/: daemon.pid
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
Rust Version/: Cargo.toml
Rust Version/docs/: 技术方案与功能需求.md
Rust Version/src/: app.rs  database.rs  graph.rs  main.rs  models.rs  scanner.rs  settings.rs
docs/: multi-select-spec.md  settings-ui-spec.md
docs/superpowers/specs/: 2025-06-14-pdf-knowledge-base-design.md
frontend/: index.html
frontend/src/: main.js  style.css  tauri-bridge.js
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/main/: App.d.ts  App.js
internal/database/: db.go  models.go
internal/extractor/: extractor.go  noop.go
internal/graph/: graph.go
internal/scanner/: scanner.go  scanner_bench_test.go
internal/tagger/: tagger.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  models.rs  scanner.rs  settings.rs
